--- a/view/frontend/templates/crud.phtml
+++ b/view/frontend/templates/crud.phtml
@@ -1,7 +1,7 @@
 <?php
 
 /**
- * @var \TresdTech\FinalProject\Block\Form $block
+ * @var \TresdTech\FinalProject\Block\crud $block
  */
 
 echo $block->crud();
