--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -1,3 +1,12 @@
+<?php
+
+/**
+ * @var \TresdTech\FinalProject\Block\crud $block
+ * echo $block->crud();
+ */
+?>
+
+<?php
 <h2>Welcome to Formulario</h2>
 </body>
 </html>
