--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -1,9 +1,10 @@
 <?php
 
 /**
- * @var \TresdTech\FinalProject\Block\crud $block
- * echo $block->crud();
+ * @var \TresdTech\FinalProject\Block\form $block
+ * 
  */
+echo $block->form();
 ?>
 
 <h2>Welcome to Formulario</h2>
