--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -7,6 +7,13 @@
 echo $block->form();
 ?>
 
-<h2>Welcome to Formulario</h2>
-</body>
-</html>
+
+
+<form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post" enctype="multipart/form-data">
+<li>
+	<label for="attachment"><?php echo Mage::helper('contacts')->__('Attachment') ?></label>
+	<div class="input-box">
+		<input name="MAX_FILE_SIZE" type="hidden" value="2000000" />
+		<input name="attachment" id="attachment" class="input-text" type="file" />
+	</div>
+</li>
