--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -8,3 +8,66 @@ echo $block->form();
 ?>
 
 
+
+<li class="fields">
+
+<div class="field">
+        <label for="billing:region_id" class="required"><em>*</em>
+            <?php echo $this->__('State/Province') ?>
+        </label>
+
+<div class="input-box">
+            <select id="billing:region_id" name="billing[region_id]" title="<?php echo $this->quoteEscape($this->__('State/Province')) ?>" class="validate-select" style="display:none;">
+<option value="">
+                    <?php echo $this->__('Please select region, state or province') ?>
+                </option>
+            </select>
+            <script type="text/javascript">
+            $('billing:region_id').setAttribute('defaultValue', "<?php echo $this->getAddress()->getRegionId() ?>");
+            </script>
+            <input type="text" id="billing:region" name="billing[region]" value="<?php echo $this->escapeHtml($this->getAddress()->getRegion()) ?>" title="<?php echo $this->quoteEscape($this->__('State/Province')) ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('region') ?>" style="display:none;" />
+        </div>
+
+    </div>
+
+
+<div class="field">
+        <label for="billing:postcode" class="required"><em>*</em>
+            <?php echo $this->__('Post Code/Zip') ?>
+        </label>
+
+<div class="input-box">
+            <input type="text" title="<?php echo $this->quoteEscape($this->__('Post Code/Zip')) ?>" name="billing[postcode]" id="billing:postcode" value="<?php echo $this->escapeHtml($this->getAddress()->getPostcode()) ?>" class="input-text validate-zip-international <?php echo $this->helper('customer/address')->getAttributeValidationClass('postcode') ?>" />
+        </div>
+
+    </div>
+
+</li>
+
+
+<li class="fields">
+
+<div class="field">
+        <label for="billing:telephone" class="required"><em>*</em>
+            <?php echo $this->__('Telephone') ?>
+        </label>
+
+<div class="input-box">
+            <input type="tel" name="billing[telephone]" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->quoteEscape($this->__('Telephone')) ?>" class="validate-phoneLax input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="billing:telephone" />
+        </div>
+
+    </div>
+
+
+<div class="field">
+        <label for="billing:fax">
+            <?php echo $this->__('Fax') ?>
+        </label>
+
+<div class="input-box">
+            <input type="tel" name="billing[fax]" value="<?php echo $this->escapeHtml($this->getAddress()->getFax()) ?>" title="<?php echo $this->quoteEscape($this->__('Fax')) ?>" class="validate-phoneLax input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" id="billing:fax" />
+        </div>
+
+    </div>
+
+</li>
