--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -8,3 +8,27 @@ echo $block->form();
 ?>
 
 
+<form action="" method="post">
+ <ul>
+  <li>
+    <label for="name">Primer Nombre:</label>
+    <input type="text" id="name" name="user_name">
+  </li>
+  <li>
+    <label for="name">Segundo Nombre:</label>
+    <input type="text" id="name" name="user_name">
+  </li>
+  <li>
+    <label for="mail">Correo electrónico:</label>
+    <input type="email" id="mail" name="user_mail">
+  </li>
+  <li>
+    <label for="msg">telephone:</label>
+    <input type="text" id="name" name="user_name">
+  </li>
+ </ul>
+ <button>ENVIAR</button>
+ </form>
+ <form action="http://192.168.0.25/finalproject/index/crud">
+    <input type="submit" value="Go to crud" />
+</form>
