--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -8,7 +8,7 @@ echo $block->form();
 ?>
 
 
-<form action="" method="post">
+<form method="post">
  <ul>
   <li>
     <label for="name">Primer Nombre:</label>
@@ -27,7 +27,7 @@ echo $block->form();
     <input type="text" id="name" name="user_name">
   </li>
  </ul>
- <input value="Enviar"/>
+ <input type="submit" value="Enviar"/>
  </form>
  <form action="http://192.168.0.25/finalproject/index/crud">
     <input type="submit" value="Go to crud" />
