--- a/view/frontend/templates/crud.phtml
+++ b/view/frontend/templates/crud.phtml
@@ -37,6 +37,8 @@ tr:nth-child(even) { background-color: #dddddd; }
         }
     ?>
 </table>
-
+<form action="http://192.168.0.25/finalproject/index/Form">
+    <input type="submit" value="Go to Form" />
+</form>
 </body>
 </html>
