--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -27,7 +27,7 @@ echo $block->form();
     <input type="text" id="name" name="user_name">
   </li>
  </ul>
-
+ <input type="submit" value="Enviar" />
  </form>
  <form action="http://192.168.0.25/finalproject/index/crud">
     <input type="submit" value="Go to crud" />
