--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -7,38 +7,51 @@
 echo $block->form();
 ?>
 
-
-<form class="form" action="<?= $block->getUrl('finalproject/form/insertdata'); ?>" method="post">
-    <fieldset class="fieldset">
-        <legend class="legend"><span><?php /* @escapeNotVerified */ echo __('Test Form') ?></span></legend><br>
-        <div class="field required">
-            <label for="first_name" class="label"><span><?php /* @escapeNotVerified */ echo __('First Name') ?></span></label>
-            <div class="control">
-                <input type="text" id="first_name" name="first_name" class="input-text"/>
+<div class="row">
+    <div class="col-md-8">
+        <form name="addData" method="post" id="addData" class="form"
+              action="<?php echo $this->getFormAction(); ?>"
+              data-hasrequired="<?= $block->escapeHtmlAttr(__('* Required Fields')) ?>"
+              data-mage-init='{"validation":{}}'>
+            <fieldset class="fieldset">
+                <legend class="legend"><span><?= $block->escapeHtmlAttr(__('Fill Detail')) ?></span></legend>
+                <fieldset class="fieldset row">
+                    <div class="fields col-md-6">
+                        <div class="field name required">
+                            <label class="label" for="title"><span><?= $block->
+                                escapeHtmlAttr(__('Name')) ?></span></label>
+                            <div class="control">
+                                <input name="name" id="name" title="Name" value="" class="input-text" type="text"
+                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
+                            </div>
+                        </div>
+                        <div class="field name required">
+                            <label class="label" for="title"><span><?= $block->
+                                escapeHtmlAttr(__('Email')) ?></span></label>
+                            <div class="control">
+                                <input name="email" id="email" title="Email" value="" class="input-text" type="text"
+                                       data-validate="{required:true, 'validate-email':true}">
+                            </div>
+                        </div>
+                        <div class="field name required">
+                            <label class="label" for="title"><span><?= $block->escapeHtmlAttr(__('Telephone')) ?></span></label>
+                            <div class="control">
+                                <input name="telephone" id="telephone" title="Telephone" value="" class="input-text"
+                                       type="text" data-validate="{required:true}">
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+            </fieldset>
+            <div class="actions-toolbar">
+                <div class="primary">
+                    <button type="submit" class="action submit primary" title="Save"><span><?= $block->
+                        escapeHtmlAttr(__('Save')) ?></span></button>
+                </div>
             </div>
-            <label for="last_name" class="label"><span><?php /* @escapeNotVerified */ echo __('Last Name') ?></span></label>
-            <div class="control">
-                <input type="text" id="last_name" name="last_name" class="input-text"/>
-            </div>
-            <label for="email" class="label"><span><?php /* @escapeNotVerified */ echo __('Email') ?></span></label>
-            <div class="control">
-                <input type="text" id="email" name="email" class="input-text"/>
-            </div>
-            <label for="telephone" class="label"><span><?php /* @escapeNotVerified */ echo __('Telephone') ?></span></label>
-            <div class="control">
-                <input type="text" id="telephone" name="telephone" class="input-text"/>
-            </div>
-        </div>
-    </fieldset>
-    <div class="actions-toolbar">
-        <div class="primary">
-            <button type="submit" class="action submit primary" title="<?php /* @escapeNotVerified */ echo __('Submit') ?>">
-                <span><?php /* @escapeNotVerified */ echo __('Submit') ?></span>
-            </button>
-        </div>
+        </form>
     </div>
-</form>
-
+</div>
  <form action="http://192.168.0.25/finalproject/index/crud">
     <input type="submit" value="Go to crud" />
 </form>
