--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -10,7 +10,7 @@ echo $block->form();
 <div class="row">
     <div class="col-md-8">
         <form name="addData" method="post" id="addData" class="form"
-              action="<?php echo $this->getFormAction(); ?>"
+              action=""
               data-hasrequired="<?= $block->escapeHtmlAttr(__('* Required Fields')) ?>"
               data-mage-init='{"validation":{}}'>
             <fieldset class="fieldset">
