--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -2,9 +2,9 @@
 
 /**
  * @var \TresdTech\FinalProject\Block\form $block
- * 
+ * echo $block->form();
  */
-echo $block->form();
+
 ?>
 
 <div class="row">
