--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -19,9 +19,17 @@
                     <div class="fields col-md-6">
                         <div class="field name required">
                             <label class="label" for="title"><span><?= $block->
-                                escapeHtmlAttr(__('Name')) ?></span></label>
+                                escapeHtmlAttr(__('first_name')) ?></span></label>
                             <div class="control">
-                                <input name="name" id="name" title="Name" value="" class="input-text" type="text"
+                                <input name="first_name" id="first_name" title="first_name" value="" class="input-text" type="text"
+                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
+                            </div>
+                        </div>
+                        <div class="field name required">
+                            <label class="label" for="title"><span><?= $block->
+                                escapeHtmlAttr(__('last_name')) ?></span></label>
+                            <div class="control">
+                                <input name="last_name" id="last_name" title="last_name" value="" class="input-text" type="text"
                                        data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
                             </div>
                         </div>
