--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -30,7 +30,7 @@
                                 escapeHtmlAttr(__('last_name')) ?></span></label>
                             <div class="control">
                                 <input name="last_name" id="last_name" title="last_name" value="" class="input-text" type="text"
-                                       data-validate="{required:true, 'validate-alphanum-no-whitespace':true}">
+                                       data-validate="{required:true, 'validate-alphanum-with-spaces':false}">
                             </div>
                         </div>
                         <div class="field name required">
