--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -30,7 +30,7 @@
                                 escapeHtmlAttr(__('last_name')) ?></span></label>
                             <div class="control">
                                 <input name="last_name" id="last_name" title="last_name" value="" class="input-text" type="text"
-                                       data-validate="{required:true, 'validate-alphanum-with-spaces':false}">
+                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
                             </div>
                         </div>
                         <div class="field name required">
@@ -45,7 +45,7 @@
                             <label class="label" for="title"><span><?= $block->escapeHtmlAttr(__('Telephone')) ?></span></label>
                             <div class="control">
                                 <input name="telephone" id="telephone" title="Telephone" value="" class="input-text"
-                                       type="text" data-validate="{required:true}">
+                                       type="text" data-validate="{required:true , 'validate-alpha':true, 'range-words':{10}{12}}">
                             </div>
                         </div>
                     </div>
