--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -45,7 +45,7 @@
                             <label class="label" for="title"><span><?= $block->escapeHtmlAttr(__('Telephone')) ?></span></label>
                             <div class="control">
                                 <input name="telephone" id="telephone" title="Telephone" value="" class="input-text"
-                                       type="text" data-validate="{required:true , 'validate-alpha':true, 'range-words':{10}{12}}">
+                                       type="text" data-validate="{required:true , minlength:10, 'validate-alpha':true}">
                             </div>
                         </div>
                     </div>
