--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -22,7 +22,7 @@
                                 escapeHtmlAttr(__('first_name')) ?></span></label>
                             <div class="control">
                                 <input name="first_name" id="first_name" title="first_name" value="" class="input-text" type="text"
-                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
+                                data-validate="{required: true, 'custom-rule-name': true}">
                             </div>
                         </div>
                         <div class="field name required">
