--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -22,15 +22,15 @@
                                 escapeHtmlAttr(__('first_name')) ?></span></label>
                             <div class="control">
                                 <input name="first_name" id="first_name" title="first_name" value="" class="input-text" type="text"
-                                data-validate="{required: true, 'custom-rule-name': true}">
+                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
                             </div>
                         </div>
                         <div class="field name required">
                             <label class="label" for="title"><span><?= $block->
                                 escapeHtmlAttr(__('last_name')) ?></span></label>
                             <div class="control">
-                                <input name="last_name" id="last_name" title="last_name" value="" class="input-text" type="text"
-                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
+                                <input name="last_name" id="last_name" title="last_name" value="" class="letters-only" type="text"
+                                       data-validate="{required:true">
                             </div>
                         </div>
                         <div class="field name required">
@@ -45,7 +45,7 @@
                             <label class="label" for="title"><span><?= $block->escapeHtmlAttr(__('Telephone')) ?></span></label>
                             <div class="control">
                                 <input name="telephone" id="telephone" title="Telephone" value="" class="input-text"
-                                       type="text" data-validate="{required:true , minlength:10, number:true}">
+                                       type="text" data-validate="{required:true , minlength:10, number:true, 'validate-alpha':true}">
                             </div>
                         </div>
                     </div>
