--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -21,8 +21,8 @@
                             <label class="label" for="title"><span><?= $block->
                                 escapeHtmlAttr(__('first_name')) ?></span></label>
                             <div class="control">
-                                <input name="first_name" id="first_name" title="first_name" value="" class="input-text" type="text"
-                                       data-validate="{required:true, 'validate-alphanum-with-spaces':true}">
+                                <input name="first_name" id="first_name" title="first_name" value="" class="letters-only" type="text"
+                                       data-validate="{required:true}">
                             </div>
                         </div>
                         <div class="field name required">
@@ -30,7 +30,7 @@
                                 escapeHtmlAttr(__('last_name')) ?></span></label>
                             <div class="control">
                                 <input name="last_name" id="last_name" title="last_name" value="" class="letters-only" type="text"
-                                       data-validate="{required:true">
+                                       data-validate="{required:true}">
                             </div>
                         </div>
                         <div class="field name required">
