--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -44,7 +44,7 @@
                         <div class="field name required">
                             <label class="label" for="title"><span><?= $block->escapeHtmlAttr(__('Telephone')) ?></span></label>
                             <div class="control">
-                                <input name="telephone" id="telephone" title="Telephone" value="" class="input-text"
+                                <input name="telephone" id="telephone" title="Telephone" value="" class="input"
                                        type="text" data-validate="{required:true , minlength:10, number:true, 'validate-alpha':true}">
                             </div>
                         </div>
