--- a/view/frontend/templates/form.phtml
+++ b/view/frontend/templates/form.phtml
@@ -21,8 +21,8 @@
                             <label class="label" for="title"><span><?= $block->
                                 escapeHtmlAttr(__('first_name')) ?></span></label>
                             <div class="control">
-                                <input name="first_name" id="first_name" title="first_name" value="" class="input-text" type="text"
-                                       data-validate="{required:true}">
+                                <input name="first_name" id="first_name" title="first_name" value="" class="letters-only" type="text"
+                                       data-validate="{required-entry:true}">
                             </div>
                         </div>
                         <div class="field name required">
@@ -30,7 +30,7 @@
                                 escapeHtmlAttr(__('last_name')) ?></span></label>
                             <div class="control">
                                 <input name="last_name" id="last_name" title="last_name" value="" class="letters-only" type="text"
-                                       data-validate="{required:true}">
+                                       data-validate="{required-entry:true}">
                             </div>
                         </div>
                         <div class="field name required">
@@ -38,14 +38,14 @@
                                 escapeHtmlAttr(__('Email')) ?></span></label>
                             <div class="control">
                                 <input name="email" id="email" title="Email" value="" class="input-text" type="text"
-                                       data-validate="{required:true, 'validate-email':true}">
+                                       data-validate="{required-entry:true, 'validate-email':true}">
                             </div>
                         </div>
                         <div class="field name required">
                             <label class="label" for="title"><span><?= $block->escapeHtmlAttr(__('Telephone')) ?></span></label>
                             <div class="control">
-                                <input name="telephone" id="telephone" title="Telephone" value="" class="input"
-                                       type="text" data-validate="{required:true , minlength:10, number:true, 'validate-alpha':true}">
+                                <input name="telephone" id="telephone" title="Telephone" value="" class=""type="text" 
+                                       data-validate="{required-entry:true , minlength:10, number:true, 'required-number':true}">
                             </div>
                         </div>
                     </div>
